style.css
/* ... */
/*--------------------------------------------------------------
4.0 Navigation
--------------------------------------------------------------*/
/*--------------------------------------------------------------
4.1 Links
--------------------------------------------------------------*/
a,
a:visited {
	color: #404040;
	text-decoration: none;
}

a:hover,
a:focus,
a:active {
	color: #404040;
}

a:focus {
	outline: thin dotted;
}

a:hover,
a:active {
	outline: 0;
	text-decoration: underline;
}

/*--------------------------------------------------------------
4.2 Menus
--------------------------------------------------------------*/
.main-navigation {
	clear: both;
	margin-bottom: 62px;
	font-size: .8em;
}

.main-navigation .menu {
	display: none;
	float: left;
	margin-top: 62px; /* Below .site-branding */
	background-color: #fff;
}

	.site-header .menu a,
	.site-header .menu a:visited,
	.site-header .menu a:focus,
	.site-header .menu a:active {
		color: #404040;
	}

	.site-header .menu a:hover {
		color: rgba(60, 60, 60, .5);
	}

.menu-toggled .main-navigation .menu {
	display: block;
}

.main-navigation ul {
	display: none;
	list-style: none;
	margin: 0;
	width: 100%;
	padding: 25px 35px;
}

.main-navigation li {
	position: relative;
	width: 100%;
	float: left;
}

	.main-navigation .menu > li:not(:first-child),
	.main-navigation .menu ul li {
		border-top: 1px solid #f1f1f1;
	}

.main-navigation a {
	display: block;
	padding: 10px 0;
	text-decoration: none;
}

.main-navigation .menu > li > a {
	height: auto;
}

.main-navigation .current_page_item > a,
.main-navigation .current-menu-item > a,
.main-navigation .current_page_ancestor > a {
	font-weight: bold;
}

.main-navigation .menu-item-has-children > a {
	padding-right: 48px;
}

.main-navigation .menu-item-has-children ul.toggled-on {
	display: block;
	float: left;
	padding: 0 0 0 35px;
}

.no-js .main-navigation ul ul {
	display: block;
}

.dropdown-toggle {
	position: absolute;
	top: 5px;
	right: 0;
	background-color: transparent;
	height: 32px;
	width: 32px;
	padding: 0;
	border: 0;
	text-transform: lowercase; /* Stop screen readers to read the text as capital letters */
	box-shadow: none;
}

	.dropdown-toggle:after {
		content: "\f347"; /* dashicons-arrow-down-alt2 */
		display: inline-block;
		width: 20px;
		height: 20px;
		font-size: 20px;
		line-height: 20px;
		font-family: dashicons;
		text-decoration: inherit;
		font-weight: 400;
		font-style: normal;
		vertical-align: top;
		text-align: center;
		-webkit-transition: color .1s ease-in 0;
		transition: color .1s ease-in 0;
		-webkit-font-smoothing: antialiased;
	}

.dropdown-toggle:hover,
.dropdown-toggle:focus {
	background-color: #efefef;
	box-shadow: none;
}

.dropdown-toggle:focus {
	outline: 1px solid #ddd;
}

	.dropdown-toggle.toggle-on:after {
		content: "\f343"; /* dashicons-arrow-up-alt2 */
	}

/* Small menu. */
.menu-toggle {
	position: absolute;
	right: 35px;
	top: 15px;
	width: 32px;
	height: 32px;
	display: block;
	overflow: hidden;
	padding: 5px;
	background-color: transparent;
	box-shadow: none;
	border-radius: 0;
	color: #fff;
	text-shadow: none;
	line-height: 32px;
	border: 1px solid rgba(255, 255, 255, .3);
}

	.menu-toggle:before {
		content: "\f333"; /* dashicons-menu */
		display: inline-block;
		width: 20px;
		height: 20px;
		font-size: 20px;
		line-height: 20px;
		font-family: dashicons;
		text-decoration: inherit;
		font-weight: 400;
		font-style: normal;
		vertical-align: top;
		text-align: center;
		-webkit-transition: color .1s ease-in 0;
		transition: color .1s ease-in 0;
		-webkit-font-smoothing: antialiased;
	}

	.menu-toggle:hover,
	.menu-toggle:focus,
	.menu-toggled .main-navigation .menu-toggle {
		box-shadow: none;
	}

		.menu-toggled .main-navigation .menu-toggle:before {
			content: '\f335'; /* dashicons-no-alt */
		}

.main-navigation ul.tools-nav {
	display: block;
	position: absolute;
	top: 15px;
	right: calc( 35px + 32px + 15px );
	width: auto;
	padding: 0;
}

	.tools-nav li {
		width: auto;
	}

	.tools-nav a {
		width: 32px;
		height: 32px;
		padding: 5px;
		line-height: 32px;
		border: 1px solid rgba(255, 255, 255, .3);
		text-align: center;
	}

		.tools-nav li:first-child a {
			border-right-width: 0;
		}

		.tools-nav li:last-child a {
			border-left-width: 0;
		}

		.tools-nav li:hover a {
			border-color: #ccc, #bbb, #aaa;
		}

		.tools-nav li.toggled a,
		.tools-nav li.toggled:hover a {
			background-color: #f9f9f9;
			color: #404040;
		}

		.tools-nav a:before {
			display: inline-block;
			width: 20px;
			height: 20px;
			font-family: dashicons;
			font-size: 20px;
			line-height: 20px;
			vertical-align: top;
		}

		.tools-nav .search-toggle a:before {
			content: '\f179';
		}

		.tools-nav .login-toggle a:before {
			content: '\f160';
		}

			.logged-in .tools-nav .login-toggle a:before {
				content: '\f310';
			}

/* Social Menu */

.menu-toggled .main-navigation .menu-social .menu {
	padding-bottom: 0;
	display: flex;
	justify-content: center;
}

.main-navigation .menu-social ~ .menu-primary .menu {
	margin-top: 0;
	padding-top: 0;
}

.main-navigation .menu-social li {
	width: auto;
}

	.main-navigation .menu-social .menu > li:not(:first-child) {
		border: none;
	}

	.main-navigation .menu-social a {
		padding: 0 5px;
		text-align: center;
	}

	.main-navigation .menu-social a:before {
		display: inline-block;
		width: 35px;
		height: 45px;
		font-family: monosocial;
		-webkit-text-rendering: optimizeLegibility;
		-moz-text-rendering: optimizeLegibility;
		-ms-text-rendering: optimizeLegibility;
		-o-text-rendering: optimizeLegibility;
		text-rendering: optimizeLegibility;
		-webkit-font-smoothing: antialiased;
		-moz-font-smoothing: antialiased;
		-ms-font-smoothing: antialiased;
		-o-font-smoothing: antialiased;
		font-smoothing: antialiased;
		font-size: 2.2em;
		line-height: 45px;
	}

	.main-navigation .menu-social a[href*="digg.com"]:before {
		content: "digg";
	}
/* ... */

